--- a/bibs/publications.bib
+++ b/bibs/publications.bib
@@ -1,3 +1,35 @@
+@article{Hallinen2020,
+author = {Hallinen, Marie J. and Wittman, Jacob T. and Aukema, Brian H.},
+journal = {Environmental Entomology (In review)},
+keywords = {review},
+mendeley-tags = {review},
+title = {{Factors associated with diversity and distribution of buprestid prey captured by foraging Cerceris fumipennis (Hymenoptera: Crabronidae)}},
+year = {2020}
+}
+@article{Short,
+author = {Short, Mara and Chase, Kevin and Feeley, Tivon and Kees, Aubree and Wittman, Jacob and Aukema, Brian},
+doi = {10.1111/afe.12360},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Short et al. - 2020 - Rail transport as a vector of emerald ash borer.pdf:pdf},
+journal = {Agricultural and Forest Entomology},
+keywords = {published},
+mendeley-tags = {published},
+pages = {92 -- 97},
+title = {{Rail transport as a vector of emerald ash borer}},
+url = {https://onlinelibrary.wiley.com/doi/full/10.1111/afe.12360},
+volume = {22},
+year = {2020}
+}
+@article{Stivers2019,
+author = {Stivers, Emma K. and Wittman, Jacob T. and Larsen, Kirk J.},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Stivers, Wittman, Larsen - 2019 - A comparison of adult butterfly communities on remnant and planted prairies in northeast Iowa.pdf:pdf},
+journal = {Journal of the Lepidopterists' Society},
+keywords = {published},
+mendeley-tags = {published},
+number = {4},
+title = {{A comparison of adult butterfly communities on remnant and planted prairies in northeast Iowa}},
+volume = {73},
+year = {2019}
+}
 @article{Wittman2017,
 author = {Wittman, Jacob and Stivers, Emma and Larsen, Kirk},
 doi = {10.18473/lepi.71i2.a9},
@@ -11,17 +43,6 @@ pages = {125--129},
 title = {{Butterfly Surveys are Impacted by Time of Day}},
 volume = {71},
 year = {2017}
-}
-@article{Short,
-author = {Short, Mara and Chase, Kevin and Feeley, Tivon and Kees, Aubree and Wittman, Jacob and Aukema, Brian},
-doi = {10.1111/afe.12360},
-file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Short et al. - 2019 - Rail transport as a vector of emerald ash borer.pdf:pdf},
-journal = {Agricultural and Forest Entomology},
-keywords = {review},
-mendeley-tags = {review},
-title = {{Rail transport as a vector of emerald ash borer}},
-url = {https://onlinelibrary.wiley.com/doi/full/10.1111/afe.12360},
-year = {2019}
 }
 @article{Wittman2013,
 abstract = {Pathogens are the number one cause of impairments of assessed rivers and streams in the USA and pose a significant human health hazard. The Dry Run Creek Watershed in Northeast Iowa has been designated as impaired by the State of Iowa because of high levels of Escherichia coli bacteria. To investigate the nature of this impairment, land use and stream bank assessments were coupled with comprehensive water quality monitoring. Physical, chemical, and biological parameters were measured at 13 different sites in the watershed, including pH, temperature, conductivity, dissolved oxygen, turbidity, total Kjeldahl nitrogen, ammonia-N, nitrate + nitrite-N, total phosphorus, and E. coli. In addition, benthic macroinvertebrate communities were analyzed at seven sites, and optical brightener tests were performed late in the season. Results identified segments of the watershed that were more prominent contributors of E. coli, and correlations were observed between levels of E. coli and several chemical parameters, including ammonia-N, total Kjeldahl nitrogen, and total phosphorus. Interestingly, distinct sites emerged as more prominent contributors of these elements during rain vs. non-rain events, suggesting different types of sources. Both the amount of rainfall and the time elapsed between the rain event and the sampling influenced E. coli levels during wet weather conditions. Nitrate + nitrite-N displayed a unique response to rain events compared with the other parameters, suggesting a different delivery route. Analyses of benthic macroinvertebrate communities were consistent with pollution trends. Collectively, these data suggest distinct agriculturally related E. coli contributions, as well as specific areas and practices for water quality improvement strategies. This study can serve as a resource for evaluating agricultural watersheds that are impaired for bacteria.},
@@ -57,16 +78,6 @@ url = {https://academic.oup.com/ee/advance-article/doi/10.1093/ee/nvz025/5429494
 volume = {48},
 year = {2019}
 }
-@article{Stivers2019,
-author = {Stivers, Emma K. and Wittman, Jacob T. and Larsen, Kirk J.},
-journal = {Journal of the Lepidopterists' Society},
-keywords = {published},
-mendeley-tags = {published},
-number = {4},
-title = {{A comparison of adult butterfly communities on remnant and planted prairies in northeast Iowa}},
-volume = {73},
-year = {2019}
-}
 @article{Wittman2018,
 abstract = {The movement behavior ofinsects character- izes their ability to disperse, establish, compete, forage, seek mates, and ultimately reproduce. Understanding the movement of invasive insects is particularly impor- tant for developing management policies.We conducted laboratory experiments in Minnesota, USA to determine how host type and food deprivation affected the move- ment of late instars of the European gypsy moth Lymantria dispar (Lepidoptera: Erebidae), an invasive forest insect in North America. Gypsy moth larvae can feed on over 300 species of trees and shrubs. During outbreaks food availability to conspecifics can become severely restricted as developing instars consume in- creasing amounts of foliage. Larvae were raised on one of five foods: Quercus macrocarpa, Larix laricina, Acer platanoides, Acer saccharinum, or artificial diet. Subsets of fifth and sixth instar larvae were also de- prived of food for zero, 24, or 48 h. After the food deprivation period, late instar larvae were placed on a servosphere and their movement paths were recorded. Larvae raised on Q. macrocarpa, a preferred host, were unlikely to move unless starved. They moved farther the longer they were starved. In contrast, when larvae were raised on less preferred hosts, they were more likely to move without prior starvation. These results suggest that feeding on optimal hosts provides gypsy moth larvae J. T. Wittman (*) : B. H. Aukema Department ofEntomology, University ofMinnesota, 1980 Folwell Avenue, St. Paul, MN 55108, USA e-mail: wittm094@umn.edu with the energy and nutritional requirements to move more quickly to more food when there is none immedi- ately available. Keywords},
 author = {Wittman, Jacob T. and Aukema, Brian H.},
@@ -82,4 +93,17 @@ title = {{Foliage Type and Deprivation Alters the Movement Behavior of Late Inst
 url = {https://link.springer.com/article/10.1007/s10905-019-09711-2},
 volume = {32},
 year = {2019}
+}
+@article{Wittman,
+author = {Wittman, Jacob T and Aukema, Brian H},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman, Aukema - 2020 - A guide and toolbox to replicability and open science in entomology(2).pdf:pdf},
+journal = {Journal of Insect Science},
+keywords = {review},
+mendeley-tags = {review},
+number = {3},
+pages = {1--9},
+title = {{A guide and toolbox to replicability and open science in entomology}},
+url = {https://doi.org/10.1093/jisesa/ieaa036},
+volume = {20},
+year = {2020}
 }
